Fix main container block stacking of game on small viewports

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -325,13 +325,18 @@ ul {
       > .grid {
         .row {
           > div {
-            &:first-child {
-              > div {
-                padding: 1em .5em 1em 1em;
-              }
-            }
             > div {
-              padding: 1em 1em 1em .5em;
+              padding: 1em;
+            }
+            @media screen and (min-width: 1024px) {
+              &:first-child {
+                > div {
+                  padding: 1em .5em 1em 1em;
+                }
+              }
+              > div {
+                padding: 1em 1em 1em .5em;
+              }
             }
           }
         }
